--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Goalsetter App",
+  "name": "express",
   "version": "1.0.0",
   "description": "Goalsetter App",
   "main": "server.js",
